# Projekt-Grupp-5

./: .gitignore
BJORNSTHEGAME/: bjornsclient.c  test
BJORNSTHEGAME/Client/: ammo.h  animation.c  animation.h  bjornclient.out  bjornsclient  bjornsclient.c  bjornsclient.out  bjornsclient2.c  bjornsclient3.out  bjornstartup.c  bjornstartup.h  clientthreads.c  clientthreads.h  controller.h  deathflag.h  gameplay.c  gameplay.h  gurka.out  hit.h  hp.h  lobby.c  lobby.h  makefile  makefile~  player.h  test  testheader.h  tst.c
BJORNSTHEGAME/Client/Bjornsgame/: animation.c  bjornstartup.c  clientthreads.c  gameplay.c
BJORNSTHEGAME/Client/bjrornstartup/: bjornstartup2.c
BJORNSTHEGAME/Images/Backgrounds/: CMakeLists.txt
BJORNSTHEGAME/Server/: #bjornthreads.h#  bjornserver  bjornserver.c  bjornserver.c~  bjornthreads.h  bjornthreads.h~  testclient  testclient.c  testserver  testserver.c
BJORNSTHEGAME/Shared/: bjornshared.c  bjornshared.h
BJORNSTHEGAME/TCPServer/: #bjornserver.c#  #bjornthreads.h#  bjornserver  bjornserver.c  bjornserver.ou  bjornserver.out  bjornshared.c  bjornshared.h  bjornstack.c  bjornstack.h  bjornthreads.c  bjornthreads.h  bjornthreads.h~  makefile  makefile~  testclient  testclient.c
BJORNSTHEGAME/UDPServer/: #bjornserver.c#  bjornserver  bjornserver.c  testclient.c
BJORNSTHEGAME/clock/: clock.c
BJORNSTHEGAME/sprite/: blue_player1.psd  blue_player2.psd  pink_player2.psd  spriteBlue.psd  spriteOrange.psd  spritePink.psd  spritePurple.psd  spriteYellow.psd  yellow_player2.psd
Testprogram2/: Short  Short.c  main.c  mario  test
(+70 files in other folders)
